# sched

./: .gitignore  Cargo.toml  README.md  build.sh  deptree  rustfmt.toml  server-start.sh
sched-server/: .env  Cargo.toml  add-user.sh  run-server.sh
sched-server/migrations/2019-02-28-051750_employees/: up.sql
sched-server/migrations/2019-02-28-162624_rename_phonenumber/: down.sql
sched-server/migrations/2019-03-02-181205_create_shifts/: up.sql
sched-server/migrations/2019-03-02-184944_shifts_add_employee_id/: up.sql
sched-server/migrations/2019-03-03-044832_hour_duration_type_change/src/: schema.rs
sched-server/migrations/2019-03-04-062151_employee_id_ref/: up.sql
sched-server/migrations/2019-03-06-000153_add_users_table/: up.sql
sched-server/migrations/2019-03-14-232252_rename_user_to_email/: down.sql  up.sql
sched-server/migrations/2019-03-20-042525_shift_time_change/: down.sql  up.sql
sched-server/migrations/2019-03-29-154750_settings_table/: down.sql  up.sql
sched-server/migrations/2019-03-29-154750_settings_table/src/: schema.rs
sched-server/migrations/2019-03-29-171826_repeat_shifts/: down.sql  up.sql
sched-server/migrations/2019-03-29-171826_repeat_shifts/src/: schema.rs
sched-server/migrations/2019-03-29-173858_to_serial_ids/: down.sql  up.sql
sched-server/migrations/2019-03-29-175851_user_sessions/: down.sql  up.sql
sched-server/migrations/2019-03-30-021725_remove_enums/: down.sql  up.sql
sched-server/migrations/2019-03-30-024753_remove_enums_2/: down.sql  up.sql
sched-server/migrations/2019-03-30-034756_encrypted_session/: up.sql
sched-server/migrations/2019-03-31-024459_session_expiration/: down.sql  up.sql
sched-server/migrations/2019-04-01-044336_shift_owner/: down.sql  up.sql
sched-server/migrations/2019-04-05-153915_user_level/: down.sql  up.sql
sched-server/migrations/2019-04-12-160228_refresh/: down.sql  up.sql
sched-server/migrations/2019-04-23-193303_per_employee_rework/: down.sql  up.sql
sched-server/migrations/2019-04-25-012811_nullable_employee_for_shift/: down.sql  up.sql
sched-server/migrations/2019-04-26-032421_show_minutes_settings/: down.sql  up.sql
sched-server/migrations/2019-04-26-181656_vacations_table/: up.sql
sched-server/migrations/2019-04-26-233614_combine_user_into_employee/: down.sql  up.sql
sched-server/migrations/2019-04-27-031340_rename_user_to_employee/: down.sql  up.sql
sched-server/migrations/2019-05-01-023957_shift_everyX_nullable/: down.sql  up.sql
sched-server/migrations/2019-05-01-045216_shift_notes/: down.sql  up.sql
sched-server/migrations/2019-05-03-032421_vacations_redo/: down.sql  up.sql
sched-server/migrations/2019-05-03-152833_show_hide_shift_vacation/: down.sql  up.sql
sched-server/migrations/2019-05-04-014250_nullable_vacation_duration/: down.sql  up.sql
sched-server/migrations/2019-05-06-035614_vacation_request_date/: down.sql  up.sql
sched-server/migrations/2019-05-12-173205_employee_default_color/: down.sql  up.sql
sched-server/migrations/2019-05-16-045621_call_shifts/: down.sql  up.sql
sched-server/migrations/2019-05-16-194333_show_call_shifts/: down.sql  up.sql
sched-server/migrations/2019-05-19-044014_shift_exceptions/: down.sql  up.sql
sched-server/migrations/2019-05-21-173050_show_disabled_settings/: down.sql  up.sql
sched-server/migrations/2019-05-22-195856_vacation_duration_not_null/: down.sql  up.sql
sched-server/migrations/2019-06-01-200651_to_seed_rework/: down.sql  up.sql
sched-server/src/: api.rs  config.rs  datetime.rs  db.rs  employee.rs  enum_helper.rs  env.rs  index.html  lib.rs  main.rs  message.rs  schema.rs  settings.rs  shift.rs  user.rs
sched-server/static/: index.html
src/: lib.rs  (+8 more)
test-client/: Cargo.toml  README.md  angular.json  package-lock.json  package.json
test-client/src/: index.html  lib.rs  main.rs
test-client/src/app/: app.component.ts  app.module.ts  credentials.service.ts  employees.service.ts  login-info.ts
test-client/src/app/login/: login.component.html  login.component.ts
test-client/static/: index.html
(+83 files in other folders)
