[package]
name = "sched-server"
version = "0.1.0"
authors = ["Jeff Wright <jeffw387@gmail.com>"]
edition = "2018"

[dependencies]
# sched = { path = "../sched"}
rust-crypto = "^0.2"
actix = ""
actix-web = ""
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["r2d2", "postgres", "chrono"]}
jsonwebtoken = ""
serde = { version = "", features = ["derive"] }
serde_json = ""
uuid = ""
futures = "0.1.25"
r2d2 = "0.8.3"
dotenv = "0.9.0"
cookie = ""