[package]
name = "sched-server"
version = "0.1.0"
authors = ["Jeff Wright <jeffw387@gmail.com>"]
edition = "2018"

[dependencies]
rust-crypto = "^0.2"
actix-rt = "0.2"
actix-http = ""
actix-files = "0.1.0-beta.4"
actix-web = {version = "1.0.0-rc", features = ["ssl"]}
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0.0", features = ["r2d2", "postgres", "chrono"]}
serde = { version = "", features = ["derive"] }
serde_json = ""
futures = "0.1.25"
env_logger = "0.6"
r2d2 = "0.8.3"
dotenv = "0.9.0"
strum = ""
strum_macros = ""
getopts = "0.2.18"
openssl = ""