[package]
name = "test-client"
version = "0.1.0"
authors = ["Jeff Wright <jeffw387@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
log = "0.4.6"
chrono = { version = "", features = ["serde"] }
futures = ""
serde = { version = "", features = ["derive"] }
serde_json = ""
yew = ""
http = ""
failure = ""
stdweb = ""