[package]
name = "test-client"
version = "0.1.0"
authors = ["Jeff Wright <jeffw387@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
chrono = { version = "", features = ["serde"] }
futures = ""
serde = { version = "", features = ["derive"] }
serde_json = ""
http = ""
wasm-bindgen = "^0.2.37"
wasm-bindgen-futures = { version = "", features = [] }
js-sys = "^0.3.14"
virtual-dom-rs = "0.6"
css-rs-macro = "0.1"
stdweb = ""
enclose = ""

[dependencies.web-sys]
version = "^0.3"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Document",
    "MouseEvent",
    "InputEvent",
    "Window",
    "console",
    "HtmlElement",
]